--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,10 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "7.0.30",
+        "php": ">=5.6.0",
         "intervention/image": "dev-master",
-        "laravel/framework": "5.3.*"
+        "laravel/framework": "5.3.*",
+        "khill/lavacharts" : "3.0.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
